segfault on client quit

--- a/asst3/Makefile
+++ b/asst3/Makefile
@@ -1,10 +1,10 @@
 all: bankingClient bankingServer
 
 bankingClient: bankingClient.c
-	gcc bankingClient.c -pthread -o bankingClient
+	gcc bankingClient.c -g -pthread -o bankingClient
 
 bankingServer: bankingServer.c
-	gcc bankingServer.c -pthread -o bankingServer
+	gcc bankingServer.c -g -pthread -o bankingServer
 
 clean:
 	rm -rf bankingClient bankingServer
